--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,8 @@ p {
 .fixed {
   position: fixed;
   top: 0;
-  height: 70px;
+  height: 54px;
   z-index: 1;
   background: #f3f3f3;
+  padding-top: 1em;
 }
